# shopify-app-demo

./: .gitignore  shopify-app-demo.sublime-project
docs/: readme.md
webapp/: elm.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  webapp.sublime-project
webapp/src/: Main.elm  bootstrap.js
webserver/: Cargo.toml
webserver-net/: .gitignore  ShopifyAppDemo.sln  compose.yaml
webserver-net/DbMgr/: DbMgr.cs  DbMgr.csproj  Extensions.cs  IDbMgr.cs
webserver-net/DbMgr/Entity/: Installation.cs
webserver-net/DbUp4AppDemo/: DbUp4AppDemo.csproj  Program.cs
webserver-net/DbUp4AppDemo/Scripts/: 000_initial_schema.sql
webserver-net/ShopifyAppDemo/: Extensions.cs  HandleUserUninstall.cs  Program.cs  ShopifyAppDemo.csproj  ShopifySessionTokenValidator.cs  VerifyShopifyRequestAttribute.cs  appsettings.Development.json  appsettings.json
webserver-net/ShopifyAppDemo/Controllers/: HomeController.cs  ShopifyController.cs
webserver-net/ShopifyAppDemo/Services/: ConfigStore.cs  IConfigStore.cs
webserver-rust/: Cargo.toml
webserver-rust/src/: main.rs  routes.rs
webserver-rust/src/middleware/: verify_shopify_request.rs
webserver-rust/src/routes/: handshake.rs
webserver/src/: lib.rs  main.rs  middleware.rs
webserver/src/middleware/: verify_shopify_request.rs
webserver/src/routes/: auth_result.rs  health_check.rs
